Correction pdp p_index et align titre vignette

--- a/scss/autre.scss
+++ b/scss/autre.scss
@@ -100,6 +100,7 @@ a{
 .pied-de-page{
     height: 330px;
     background: $col-pdpP;
+    top: auto;
 
     &__titre{
         display: flex;
