--- a/scss/media.scss
+++ b/scss/media.scss
@@ -30,6 +30,7 @@
     .vignettes{
         display: flex;
         flex-wrap: wrap;
+        width: 1100px;
         margin: auto;
 
         &__align{
@@ -56,7 +57,7 @@
         margin: auto;
         position: relative;
         z-index: 2;
-        top: 80px;
+        top: 70px;
 
         &__menu{
             display: flex;        
@@ -96,7 +97,7 @@
         flex-direction: row;
         justify-content: flex-end;
         height: 114px;
-        top:80px;
+        top:70px;
 
         &__m-align{
             display: flex;
@@ -112,6 +113,15 @@
 
     }
 
+    .pied-de-page_2{
+        position:relative;
+        z-index: 3;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        height: 114px;
+        background:#353535;
+    }
 
     /*------------------------------*/
     /* = Positionnement des images  */
@@ -121,14 +131,4 @@
         object-position: 0 -400px;
     }
 
-    .img-alafrancaise__2 {
-           object-position: 0 -20px;
-      }
-
-      .img-ledelice__2 {
-           object-position: 0 -25px;
-      }
-      .img-lanote {
-           object-position: 0 -160px;
-      }
 }
